gtk: window: don't forget to realize popovers of subwindows

https://bugzilla.gnome.org/show_bug.cgi?id=770307